Added recycling bin, and made folders more distinguishable from files.
Also increased size of text in num pad on app.

--- a/code/mobile/KivyPad/pad.kv
+++ b/code/mobile/KivyPad/pad.kv
@@ -81,6 +81,7 @@ ScreenManagement:
         Label:
             id: display
             text: root.numsString
+            font_size: Window.height/20
             pos_hint: {"center_x": .5, "y": .35}
 
 <MainScreen>:
