Fixed enc/dec popup and improved AES code.
Added some more comments to aes.go, and also made it so temporary lists aren't needed in any functions required by encrypt/decrypt other than expandKey.

--- a/code/python-go/widgets.kv
+++ b/code/python-go/widgets.kv
@@ -69,6 +69,21 @@
             hint_text: "Name"
             on_text_validate: root.makeFolder(self.text)
 
+<decryptDirPop@Popup>:
+    title: "Decrypt Folder"
+    size_hint: .7, .4
+    pos_hint: {"center_x": .5, "center_y": .5}
+    auto_dismiss: True
+    GridLayout:
+        cols: 1
+        Label:
+            text: "Input the destination directory."
+        TextInput:
+            id: decDirInput
+            size_hint: .7, .4
+            multiline: False
+            hint_text: "Directory:"
+            on_text_validate: root.checkCanDec(self.text)
 
 
 <LoginScreen>:
