Made it so the user can switch between BT login and norm login.
A new BT port is used every time though. Is something to do with not stopping the self.serverSock.accept() in MainScreen. Not sure how to fix tho.

--- a/code/python-go/kivyStuff/kvFiles/loginSc.kv
+++ b/code/python-go/kivyStuff/kvFiles/loginSc.kv
@@ -32,5 +32,14 @@
         size_hint: .16, .16
         font_size: 22
         text: "Submit"
-        pos_hint: {"center_x": 0.5, "center_y": 0.4}
+        pos_hint: {"center_x": 0.5, "center_y": 0.3}
         on_release: root.manager.current = root.checkKey(keyInput.text)
+
+    Button:
+        size_hint: .18, .16
+        pos_hint: {"x": 0, "bottom": 1}
+        text: "Login with BT"
+        font_size: 22
+        on_release: root.cancel()
+
+
