Made SettingsPop a screen instead.
Also split up the kv files a bit, since most of it was in mainSc.kv.

--- a/code/python-go/kivyStuff/kvFiles/mainSc.kv
+++ b/code/python-go/kivyStuff/kvFiles/mainSc.kv
@@ -1,183 +1,4 @@
 #: import Window kivy.core.window.Window
-#: import Clock kivy.clock.Clock
-
-<listButton@Button>:
-    font_size: 14
-    halign: "left"
-    valign: "middle"
-    height: 30
-    size_hint: 1, None
-    on_release: root.outerScreen.traverseButton(self.fileObj)
-
-<nameSortButton@Button>:
-    font_size: 14
-    on_release: root.changeSortOrder()
-
-<sizeSortButton@Button>:
-    font_size: 14
-    on_release: root.changeSizeOrder()
-
-<infoButton@Button>:
-    font_size: 14
-    size_hint: .05, 1
-    halign: "left"
-    valign: "middle"
-    text: " INFO"
-    on_release: root.outerScreen.getFileInfo(self.fileObj)
-
-<infoLabel@Label>:
-    text_size: self.width, None
-    height: self.texture_size[1]
-
-<deleteButton@Button>:
-    on_release: root.outerScreen.deleteFile(self.fileObj)
-
-<ConfirmationPopup@Popup>:
-    title: "Confirmation"
-    size_hint: .4, .4
-    pos_hint: {"center_x": .5, "center_y": .5}
-    auto_dismiss: False
-    FloatLayout:
-        Label:
-            text: "Are you sure?"
-            pos_hint: {"center_x": .5, "center_y": .7}
-        Button:
-            text: "No!!!"
-            pos_hint: {"center_x": .25, "center_y": .25}
-            size_hint: .4, .3
-            on_release: Clock.schedule_once(root.dismiss, -1)
-
-        Button:
-            text: "Yes"
-            pos_hint: {"center_x": .75, "center_y": .25}
-            size_hint: .4, .3
-            on_release: Clock.schedule_once(root.dismiss, -1);root.fileScreen.outerScreen.checkCanEncrypt(root.inputText)
-
-<addNewFolderPop@Popup>:
-    title: "Add New Folder"
-    size_hint: .7, .4
-    pos_hint: {"center_x": .5, "center_y": .5}
-    auto_dismiss: True
-    GridLayout:
-        cols: 1
-        Label:
-            text: "New Folder Name:"
-        TextInput:
-            id: folderNameInput
-            size_hint: .7, .4
-            multiline: False
-            hint_text: "Name"
-            on_text_validate: root.makeFolder(self.text)
-
-<decryptDirPop@Popup>:
-    title: "Decrypt Folder"
-    size_hint: .7, .4
-    pos_hint: {"center_x": .5, "center_y": .5}
-    auto_dismiss: True
-    GridLayout:
-        cols: 1
-        Label:
-            text: "Input the destination directory."
-        TextInput:
-            id: decDirInput
-            size_hint: .7, .4
-            multiline: False
-            hint_text: "Directory:"
-            on_text_validate: root.checkCanDec(self.text)
-
-<addFilePop@Popup>:
-    name: "addFile"
-    id: addFile
-    submitDirs: submitDirs
-    title: "Add File"
-    FloatLayout:
-        Label:
-            size_hint: .46, .08
-            font_size: 18
-            text: "Enter the directories what files you would like to encrypt (can be a folder).\nYou can seperate each directory with '--' if you want to do multiple locations."
-            pos_hint: {"center_x": 0.5, "y": 0.8}
-
-        Button:
-            id: submitDirs
-            size_hint: .16, .16
-            pos_hint: {"center_x": .5, "center_y": .4}
-            text: "Submit"
-            on_release: root.checkIfSure(Search.text)
-
-        Button:
-            id: cancel
-            size_hint: .16, .08
-            pos_hint: {"center_x": .5, "center_y": .24}
-            text: "Close"
-            on_release: root.dismiss()
-
-        TextInput:
-            id: Search
-            size_hint: .7, .08
-            font_size: 22
-            hint_text: "Directories"
-            pos_hint: {"center_x": 0.5, "center_y": 0.7}
-            multiline: False
-
-
-<SettingsPop@Popup>:
-    auto_dismiss: False
-    newLoc: newLoc
-    title: "Settings"
-    GridLayout:
-        cols: 2
-        Label:
-            text: "Vault Location:"
-            font_size: 20
-        Label:
-            text: root.outerScreen.path
-            font_size: 14
-
-        Label:
-            text: "Change Vault Location:"
-            font_size: 16
-        GridLayout:
-            cols: 2
-            TextInput:
-                id: newLoc
-                size_hint_x: .85
-                font_size: 22
-                multiline: False
-                hint_text: "Location"
-            Button:
-                size_hint_x: .15
-                text: "Submit"
-                on_release: root.changeVault(newLoc.text)
-
-
-        Label:
-            text: "Search folders recursively"
-        Switch:
-            id: searchSwitch
-            active: root.outerScreen.searchRecursively
-
-        Label:
-            text: "Use Bluetooth"
-        Switch:
-            id: btSwitch
-            active: root.outerScreen.useBTTemp
-
-        Label:
-        Label:
-
-        Label:
-        Label:
-
-        Label:
-            text: "Note: Changes that you make that affect the login method only take effect once the program is restarted."
-            text_size: self.size
-        Label:
-
-        Button:
-            text: "Exit"
-            font_size: 20
-
-            on_release: root.dismiss()
 
 <MainScreen>:
     addFile: addFile
@@ -221,7 +42,7 @@
             id: settings
             size_hint: .06, .08
             pos_hint: {"x": 0.62, "top": 1}
-            on_release: root.openSettingsPop()
+            on_release: root.manager.current = "Settings"
             Image:
                 source: root.getPathForButton("settings.png")
                 x: self.parent.x+10
