--- a/code/python-go/kivyStuff/kvFiles/mainScClasses.kv
+++ b/code/python-go/kivyStuff/kvFiles/mainScClasses.kv
@@ -7,6 +7,7 @@
     valign: "middle"
     height: 30
     size_hint: 1, None
+    on_release: root.outerScreen.traverseButton(self.fileObj)
     #drag_rectangle: self.x, self.y, self.width, self.height
     #drag_timeout: 10000000
     #drag_distance: 0
