--- a/code/python-go/kivyStuff/kvFiles/mainScClasses.kv
+++ b/code/python-go/kivyStuff/kvFiles/mainScClasses.kv
@@ -101,7 +101,6 @@
 
 
 <addFilePop@Popup>:
-    name: "addFile"
     id: addFile
     submitDirs: submitDirs
     size_hint: .7, .7
@@ -114,13 +113,6 @@
             pos_hint: {"center_x": 0.5, "y": 0.8}
 
         Button:
-            id: submitDirs
-            size_hint: .16, .16
-            pos_hint: {"center_x": .5, "center_y": .4}
-            text: "Submit"
-            on_release: root.checkIfSure(Search.text)
-
-        Button:
             size_hint: .16, .16
             pos_hint: {"center_x": .5, "center_y": .2}
             text: "Close"
@@ -130,7 +122,13 @@
             size_hint: .9, .12
             font_size: 22
             hint_text: "Directories"
+            id: dirInp
             pos_hint: {"center_x": 0.5, "center_y": 0.7}
             multiline: False
 
-
+        Button:
+            id: submitDirs
+            size_hint: .16, .16
+            pos_hint: {"center_x": .5, "center_y": .4}
+            text: "Submit"
+            on_release: root.checkIfSure(root.ids.dirInp.text)
