--- a/code/python-go/kivyStuff/kvFiles/mainScPops.kv
+++ b/code/python-go/kivyStuff/kvFiles/mainScPops.kv
@@ -30,7 +30,7 @@
             size_hint: .7, .4
             multiline: False
             hint_text: "Directory:"
-            on_text_validate: root.checkCanDec(self.text)
+            on_text_validate: root.checkCanDec(self.text); root.dismiss()
 
 
 <addFilePop@Popup>:
@@ -87,3 +87,20 @@
             pos_hint: {"center_x": .75, "center_y": .25}
             size_hint: .4, .3
             on_release: Clock.schedule_once(root.dismiss, -1);root.fileScreen.outerScreen.checkCanEncrypt(root.inputText)
+
+<fileInfoPop@Popup>:
+    title: "File Information"
+	pos_hint: {"center_x": .5, "center_y": .5}
+	size_hint: .7, .4
+
+    BoxLayout:
+		id: fileInfoBox
+		orientation: "horizontal"
+		size_hint: 1, 1
+
+		ScrollView:
+			GridLayout:
+                id: infoGrid
+				cols: 2
+				size_hint_y: None
+				row_default_height: 40
